<resources>
    <string name="app_name">Apululu</string>

    <string name="footer" translatable="true">"\@Apululu 2019 | All rights reserved"</string>

    <string name="logintittle" translatable="true">Meet Cool people around you</string>
    <string name="facebook_button" translatable="true">Login with Facebook</string>
    <string name="login_email_button" translatable="true">Login with Email</string>
    <string name="register_singup" translatable="true">"Don't have an account? Tap to Sign Up"</string>

    <!-- Pantallas de Registro-->
    <string name="insert_email" translatable="true">Insert your Email</string>
    <string name="example_email" translatable="true">example@mail.com</string>
    <string name="terms_and_conditions" translatable="true">I agree with Terms,&#xA; Agreements and Privacy Policy</string>
    <string name="button_next" translatable="true">NEXT</string>
    <string name="verification_title" translatable="true">Verification</string>
    <string name="password_tittle" translatable="true">Insert a password &#xA; to your account</string>
    <string name="password_input" translatable="true">Password</string>
    <string name="repeat_password_input" translatable="true">Repeat Password</string>
    <string name="name_lastname_tittle" translatable="true">What is your name?</string>
    <string name="name_register" translatable="true">Names</string>
    <string name="last_name" translatable="true">Last Name</string>
    <string name="calendar_age" translatable="true">Tell us, how old are you?</string>
    <string name="sex_tittle" translatable="true">Are you a..?</string>
    <string name="male" translatable="true">MAN</string>
    <string name="female" translatable="true">WOMAN</string>
    <string name="insert_phone_number" translatable="true">Please, &#xA; insert your phone number</string>
    <string name="talk_more_about_you" translatable="true">Talk us,&#xA; more about you</string>
    <string name="profession" translatable="true">Profession</string>
    <string name="how_do_you_do" translatable="true">How do you do?</string>
    <string name="student" translatable="true">Are you a student?</string>
    <string name="study" translatable="true">What are you studying?</string>
    <string name="other" translatable="true">Other Activities…</string>
    <string name="other_atributte" translatable="true">What is your other activity?</string>
    <string name="student_button" translatable="true">Write here..</string>
    <string name="register_success" translatable="true">You have been registered successfully</string>
    <string name="gender_prefence" translatable="true">Gender</string>
    <string name="Age_prefence" translatable="true">Age</string>
    <string name="distance_prefence" translatable="true">Distance</string>
    <string name="work_preference" translatable="true">What do you prefer him / her to do?</string>
    <string name="work_preference_button" translatable="true">WORK</string>
    <string name="study_preference_button" translatable="true">STUDY</string>
    <string name="other_preference_button" translatable="true"> Doesn\'t Matter</string>
    <string name="regilion_preference" translatable="true">Religion</string>
    <string name="select_religion" translatable="true">Catholic</string>
    <string name="nationality_preference" translatable="true">Nationality</string>
    <string name="select_nationality" translatable="true">Canada</string>
    <string name="setting_profile_tittle" translatable="true">Settings</string>
    <string name="city_settings_profile" translatable="true">Where do you live?</string>
    <string name="cerrar_sesion" translatable="true">Logout</string>
    <string name="match_Tittle" translatable="true">It\'s a Match</string>
    <string name="save_button" translatable="true">SAVE</string>
    <string name="notification_like_message" translatable="true">Likes you!</string>
    <string name="calendar_input" translatable="true">Insert your Age</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
