<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsProfileActivity">

    <include layout="@layout/menu_layout"
        android:id="@+id/menuAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/llTitleAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_blue_cute"
        android:layout_below="@+id/menuAjustes"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_profile_tittle"
            android:textSize="25sp"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:layout_margin="8dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTitleAjustes">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvNameTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_register"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_gray"
                android:textStyle="bold"/>
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNameTittle"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_gray"
                android:textStyle="bold"
                android:layout_below="@+id/tiName"/>
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiLastName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLastName"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_settings_profile"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_gray"
                android:textStyle="bold"
                android:layout_below="@+id/tiLastName"/>
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiCity"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCity"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvBirthay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar_age"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_gray"
                android:textStyle="bold"
                android:layout_below="@+id/tiCity"/>
            <EditText
                android:id="@+id/etBirthday"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:layout_below="@+id/tvBirthay"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tiGenderAjustes"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/sex_tittle"
                android:textColor="@color/color_gray"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:layout_below="@+id/etBirthday"/>

            <LinearLayout
                android:id="@+id/llGenderAjustesMale"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/tiGenderAjustes"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_rounded_dark_gray"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp">
                <TextView
                    android:id="@+id/tvGenderAjustesMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="20sp"
                    android:textColor="@color/color_white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llGenderAjustesFemale"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/llGenderAjustesMale"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_rounded_dark_gray"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp">
                <TextView
                    android:id="@+id/tvGenderAjustesFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="20sp"
                    android:textColor="@color/color_white"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvWorkTittleAjustes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/talk_more_about_you"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_below="@+id/llGenderAjustesFemale"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:textColor="@color/color_gray"/>
            <LinearLayout
                android:id="@+id/llWorkAjustes"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/tvWorkTittleAjustes"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_rounded_dark_gray"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp">
                <TextView
                    android:id="@+id/tvWorkAjustes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_preference_button"
                    android:textSize="20sp"
                    android:textColor="@color/color_white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llStudyAjustes"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/llWorkAjustes"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_rounded_dark_gray"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp">
                <TextView
                    android:id="@+id/tvStudyAjustes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/study_preference_button"
                    android:textSize="20sp"
                    android:textColor="@color/color_white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llOtherPreference"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/llStudyAjustes"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_rounded_dark_gray"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp">
                <TextView
                    android:id="@+id/tvOtherAjustes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_preference_button"
                    android:textSize="20sp"
                    android:textColor="@color/color_white"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tiPhoneAjustes"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/insert_phone_number"
                android:textColor="@color/color_gray"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:layout_below="@+id/llOtherPreference"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_below="@+id/tiPhoneAjustes"
                android:layout_marginBottom="50dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="20sp"/>
            </LinearLayout>
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>