<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/llBoxLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiUser"
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:hint="@string/insert_email"
            android:textSize="25sp"
            android:layout_margin="9dp"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiPassword"
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:layout_margin="9dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonNextLogin"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rounded_white"
        android:gravity="center">
        <TextView
            android:id="@+id/tvNextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:textSize="25sp"
            android:textColor="@color/black"/>

    </LinearLayout>
</RelativeLayout>