<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_register"
    tools:context=".activity.InsertOtherActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="172dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talk_more_about_you"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtonProfession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:gravity="center">
            <RelativeLayout
                android:id="@+id/llBtnProfession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_gray"
                >
                <CheckBox
                    android:id="@+id/cbProfession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profession"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtonStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/llButtonProfession"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/llBtnStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_gray">
                <CheckBox
                    android:id="@+id/cbStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtonOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/llButtonStudent"
            android:layout_marginTop="50dp"
            android:gravity="center">
            <RelativeLayout
                android:id="@+id/llBtnOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_gray">
                <CheckBox
                    android:id="@+id/cbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/other"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/llButtonOtherNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_rounded_white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_next"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>